--- a/upload-blog.html
+++ b/upload-blog.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="form-group">
-                <label for="blogImage">Featured Image</label>
+                <label for="Internet Computer Technology PNG Images,  Computer Clipart, Technology Clipart, The Internet PNG Transparent Background - Pngtree">Featured Image</label>
                 <input type="file" id="blogImage" name="image" accept="image/*" required>
                 <div id="imagePreview" class="image-preview"></div>
             </div>
