made changes for mobile web

--- a/blog-posts/how-internet-works.html
+++ b/blog-posts/how-internet-works.html
@@ -11,7 +11,7 @@
     <div class="blog-content">
         <!-- Interactive Featured Image -->
         <div class="featured-image-container">
-            <img src="Internet Computer Technology PNG Images,  Computer Clipart, Technology Clipart, The Internet PNG Transparent Background - Pngtree" alt="Internet Computer Technology" class="featured-image interactive">
+            <img src="images/logo/Internet Computer Technology PNG Images,  Computer Clipart, Technology Clipart, The Internet PNG Transparent Background - Pngtree.jpeg" alt="Internet Computer Technology" class="featured-image interactive">
             <div class="image-overlay">
                 <div class="zoom-controls">
                     <button class="zoom-in"><i class="fas fa-search-plus"></i></button>
