--- a/index.html
+++ b/index.html
@@ -16,32 +16,23 @@
                     <img src="images/logo/P.png" alt="Rehan's Logo" class="logo-img">
                 </a>
             </div>
+            
+            <!-- Hamburger Menu Button -->
+            <div class="hamburger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+
+            <!-- Navigation Links -->
             <ul class="nav-links">
-                <li><a href="#home" class="nav-item">
-                    <i class="fas fa-home fa-lg"></i> 
-                    <span>Home</span>
-                </a></li>
-                <li><a href="#about" class="nav-item">
-                    <i class="fas fa-user fa-lg"></i> 
-                    <span>About</span>
-                </a></li>
-                <li><a href="#blog" class="nav-item">
-                    <i class="fas fa-blog fa-lg"></i> 
-                    <span>Blog</span>
-                </a></li>
-                <li><a href="#contact" class="nav-item">
-                    <i class="fas fa-envelope fa-lg"></i> 
-                    <span>Contact</span>
-                </a></li>
+                <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+                <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+                <li><a href="#blog"><i class="fas fa-blog"></i> Blog</a></li>
+                <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
                 <li class="auth-links">
-                    <a href="login.html" class="login-btn">
-                        <i class="fas fa-sign-in-alt fa-lg"></i>
-                        <span>Login</span>
-                    </a>
-                    <a href="signup.html" class="signup-btn">
-                        <i class="fas fa-user-plus fa-lg"></i>
-                        <span>Sign Up</span>
-                    </a>
+                    <a href="login.html" class="login-btn"><i class="fas fa-sign-in-alt"></i> Login</a>
+                    <a href="signup.html" class="signup-btn"><i class="fas fa-user-plus"></i> Sign Up</a>
                 </li>
             </ul>
         </nav>
@@ -218,7 +209,7 @@
                 <!-- First Blog Post -->
                 <article class="blog-card">
                     <div class="blog-image">
-                        <img src="Internet Computer Technology PNG Images,  Computer Clipart, Technology Clipart, The Internet PNG Transparent Background - Pngtree" alt="Blog Post 1">
+                        <img src="images/logo/Internet Computer Technology PNG Images,  Computer Clipart, Technology Clipart, The Internet PNG Transparent Background - Pngtree.jpegS" alt="Blog Post 1">
                     </div>
                     <div class="blog-content">
                         <div class="blog-meta">
