chnaged colours and background

--- a/index.html
+++ b/index.html
@@ -35,6 +35,21 @@
                     <a href="signup.html" class="signup-btn"><i class="fas fa-user-plus"></i> Sign Up</a>
                 </li>
             </ul>
+
+            <div class="search-wrapper">
+                <div class="search-container">
+                    <input type="text" class="search-input" placeholder="Type to search...">
+                    <div class="search-icon">
+                        <i class="fas fa-search"></i>
+                    </div>
+                    <div class="search-close">
+                        <i class="fas fa-times"></i>
+                    </div>
+                </div>
+                <div class="search-results">
+                    <div class="results-container"></div>
+                </div>
+            </div>
         </nav>
     </header>
 
@@ -237,10 +252,10 @@
             <div class="contact-container">
                 <form class="contact-form">
                     <div class="form-group">
-                        <input type="text" placeholder="Rehan Pathan" required>
+                        <input type="text" placeholder="Your Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" placeholder="rehanipathan906@gmail.com" required>
+                        <input type="email" placeholder="your email" required>
                     </div>
                     <div class="form-group">
                         <textarea placeholder="hey guys i am rehan " required></textarea>
